--- a/src/Layout/index.module.scss
+++ b/src/Layout/index.module.scss
@@ -5,9 +5,10 @@
 	.ant-layout-sider {
 		box-sizing: border-box;
 	}
-	.ant-layout {
+	:global(.ant-layout) {
 		/* 防止 tabs 超出不收缩 */
 		overflow-x: hidden;
+    height: 100%;
 		.ant-layout-content {
 			box-sizing: border-box;
 			flex: 1;
