--- a/src/Layout/components/Menu/index.module.scss
+++ b/src/Layout/components/Menu/index.module.scss
@@ -31,7 +31,7 @@ aside::-webkit-scrollbar-thumb {
 }
 
 aside::-webkit-scrollbar-thumb:hover {
-  background: #e6f4ff; // 鼠标移入滑块变红
+  background: #ffffff; // 鼠标移入滑块变红
 }
 
 :global(.ant-layout-sider) {
