--- a/src/Layout/components/Header/index.module.scss
+++ b/src/Layout/components/Header/index.module.scss
@@ -1,22 +1,116 @@
-.logo {
-  display: flex;
-  align-items: center;
-  height: 48px;
-  .lg {
-    width: 38px;
-    height: 38px;
-    margin-right: 10px;
-    vertical-align: middle;
-  }
-  h2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-      sans-serif;
-    margin: 0;
-    height: 48px;
-    margin-top: -10px;
+.header {
+  :global {
+    .ant-layout-header {
+      z-index: 110;
+      display: flex;
+      align-items: center;
 
-    a {
-      color: #fff;
+      position: fixed;
+      width: 100%;
+      height: 48px;
+      padding: 0 10px;
+      .logo {
+        display: flex;
+        align-items: center;
+        height: 48px;
+        .lg {
+          width: 38px;
+          height: 38px;
+          margin-right: 10px;
+          vertical-align: middle;
+        }
+        h2 {
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+            sans-serif;
+          margin: 0;
+          height: 48px;
+          margin-top: -10px;
+
+          a {
+            color: #fff;
+          }
+        }
+      }
+
+      .question {
+        margin: 0 10px;
+      }
+      .search_active {
+        display: flex;
+        align-items: center;
+        padding: 0 5px;
+        height: 48px;
+        &:hover {
+          background-color: #252a3d;
+        }
+        .searchIcon {
+          text-align: center;
+          height: 48px;
+          line-height: 48px;
+          transition: all 0.5s ease-in;
+        }
+        .searchInput {
+          margin-left: 5px;
+          width: 210px;
+          transition: all 0.5s ease-in;
+        }
+      }
+      .ant-input {
+        border-radius: 0;
+        height: 22px;
+        width: 210px;
+        padding: 0 !important;
+      }
+      .ant-input::placeholder {
+        padding-left: 6px;
+        font-size: 12px;
+        color: #bfbfbf;
+      }
     }
+    .message {
+      .ant-scroll-number {
+        box-shadow: 0 0 0 1px #ff4d4f;
+        height: 18px;
+        padding: 0px 8px;
+        border-radius: 9px;
+      }
+    }
+    .photo{
+      margin-bottom: 6px;
+      margin-right: 15px;
+      .user{
+        color: #fff;
+      }
+    }
+
   }
 }
+
+// .search {
+//   display: flex;
+//   align-items: center;
+//   padding: 0 5px;
+//   height: 48px;
+//   width: 38px;
+//   &:hover {
+//     background-color: #252a3d;
+//   }
+//   .searchIcon {
+//     text-align: center;
+//     height: 48px;
+//     line-height: 48px;
+//     transition: all 0.5s ease-in;
+//   }
+//   .searchInput {
+//     width: 0;
+
+//     transition: width 0.5s ease-in;
+//   }
+//   .ant-input {
+//     width: 0px;
+//     padding: 0 !important;
+//     &:hover {
+//       border: 1px solid #0499d4;
+//     }
+//   }
+// }
