feat:表格样式交互搭建完成

--- a/src/baseUI/components/TableList/index.module.scss
+++ b/src/baseUI/components/TableList/index.module.scss
@@ -1,26 +1,34 @@
-.table{
+.table {
   margin-top: 15px;
   padding: 20px;
   min-height: 500px;
   background-color: #fff;
-  :global{
-    .operation{
+  :global {
+    .operation {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      .left{
+      .left {
         font-size: 18px;
         font-weight: 500;
       }
-      .right{
+      .right {
         margin-right: 40px;
-
-        
       }
-      :where(.css-dev-only-do-not-override-18iikkb).ant-btn{
+      :where(.css-dev-only-do-not-override-18iikkb).ant-btn {
         border-radius: 0;
         margin-right: 4px;
       }
     }
+    .list {
+      margin-top: 20px;
+    }
+    :where(.css-dev-only-do-not-override-18iikkb).ant-table-wrapper
+      .ant-table-tbody
+      > tr.ant-table-row-selected:hover
+      > td {
+      background-color: #dcf4ff !important;
+    }
+    
   }
 }
