--- a/src/baseUI/components/TableList/components/styles/list.module.scss
+++ b/src/baseUI/components/TableList/components/styles/list.module.scss
@@ -13,6 +13,7 @@
       color: #222526;
 
       .cancel {
+        cursor: pointer;
         color: #18acff;
       }
     }
@@ -33,7 +34,6 @@
       box-shadow: 0 -6px 16px -8px rgba(0, 0, 0, 0.08),
         0 -9px 28px 0 rgba(0, 0, 0, 0.05), 0 -12px 48px 16px rgba(0, 0, 0, 0.03);
       .left {
-
         float: left;
       }
     }
