feat:完成删除套餐，修改上架状态

--- a/src/views/business/goods/components/TableList/index.module.scss
+++ b/src/views/business/goods/components/TableList/index.module.scss
@@ -39,5 +39,11 @@
       ).ant-radio-button-wrapper:last-child {
       border-radius: 0;
     }
+    :where(.css-dev-only-do-not-override-18iikkb).ant-switch.ant-switch-checked {
+      background-color: #52c41a;
+    }
+    :where(.css-dev-only-do-not-override-18iikkb).ant-switch.ant-switch-checked:hover{
+      background-color: #52c41a;
+    }
   }
 }
